# Wiki-Links-Tree

./: README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
sample_vault/: Home.md  Page 1.md  Page 2.md
tests/: test_main.py
wikilinksgraph/: main.py
